# mfinancials

./: .gitignore  LICENSE  README.md  example.py  requirements.txt  setup.cfg  setup.py
mfinancials/: __init__.py  _tickers.py  base.py  params.py  ticker.py  utils.py
