[metadata]
# replace with your username:
name = mfinacials
version = 0.0.1
author = Tobias Seidel
author_email = tobiasseidel@mail.de
description = Simple module for downloading financial statements and estimates from financials.morningstar.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6