[metadata]
# replace with your username:
name = mfinancials
version = 0.0.3
author = Tobias Seidel
author_email = tobiasseidel@mail.de
description = Simple module for downloading financial statements and estimates from financials.morningstar.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobigs/mfinancials
project_urls =
    Bug Tracker = https://github.com/tobigs/mfinancials/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable

    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords= pandas, morningstar financials
[options]
packages = find:
python_requires = >=3.6